--- a/staticfiles/css/project.css
+++ b/staticfiles/css/project.css
@@ -1867,7 +1867,7 @@ margin-left: 20px;
             .ffadd {
                 width: 24px;
                 height: 24px;
-                margin-left: 90px;
+                right: 0;
                 margin-top: 25px;
             }
 
