--- a/staticfiles/templates/pole.html
+++ b/staticfiles/templates/pole.html
@@ -25,7 +25,7 @@
                     <input type="file" class="no_vision2" name="screenshot_add" id="screenshot_add">
     <label for="screenshot_add"><p class="good_label"> <span class="ssrw">Добавить скриншот</span></p></label>
                       <input type="url" name="url_input_project" placeholder="Введите ссылку на пост" class="input_project_name">
-                        <input type="text" name="url_input_project_name" placeholder="Введите название ссылки" class="input_project_name">
+                        <input type="text" name="url_input_project_name" placeholder="Введите никнейм блогера делающего пост" class="input_project_name">
                     <div class="display_flex_date_input">
                         <p class="date_text_modal_box_radius">Реальная:</p>
                         <input type="date" class="input_date" name="date_finish">
