--- a/staticfiles/templates/profile_meneger.html
+++ b/staticfiles/templates/profile_meneger.html
@@ -31,7 +31,7 @@
                 <p class="projects_classic_button_text">Результаты</p>
             </button>
             <button class="button_on_projects_classic" onclick="location.href='{% url 'applic_m' %}'">
-                <img src="{% static 'image/Applications.svg' %}">
+                <img src="{% static 'image/Applications (1).svg' %}">
                 <p class="projects_classic_button_text">Заявки</p>
             </button>
             <button class="button_on_projects_classic" onclick="location.href='{% url 'profile_manager' %}'">
@@ -47,7 +47,7 @@
             <p class="default_data_text">Имя: <span class="black_profile_text_status">{{ us_man_inf.name }}</span></p>
             <p class="default_data_text">Почта: <span class="default_data_text">{{ us_man_inf.email }}</span></p>
             <p class="default_data_text">Роль: <span class="yellow_profile_text_status">Менеджер</span></p>
-            <p class="default_data_text">Верефикация: <span class="black_profile_text_status">Нет</span></p>
+            <p class="default_data_text">Верификация: <span class="black_profile_text_status">Нет</span></p>
             <p class="default_data_text">Telegram: <span class="black_profile_text_status">SSS</span></p>
         </div>
         <div class="referal_block">
