--- a/templates/profile_meneger.html
+++ b/templates/profile_meneger.html
@@ -31,7 +31,7 @@
                 <p class="projects_classic_button_text">Результаты</p>
             </button>
             <button class="button_on_projects_classic" onclick="location.href='{% url 'applic_m' %}'">
-                <img src="{% static 'image/Applications.svg' %}">
+                <img src="{% static 'image/Applications (1).svg' %}">
                 <p class="projects_classic_button_text">Заявки</p>
             </button>
             <button class="button_on_projects_classic" onclick="location.href='{% url 'profile_manager' %}'">
