--- a/staticfiles/templates/bloger_profile.html
+++ b/staticfiles/templates/bloger_profile.html
@@ -40,7 +40,7 @@
                 <p class="projects_classic_button_text">Результаты</p>
             </button>
             <button class="button_on_projects_classic" onclick="location.href='{% url 'applic_b' %}'">
-                <img src="{% static 'image/Applications.svg' %}">
+                <img src="{% static 'image/Applications (1).svg' %}">
                 <p class="projects_classic_button_text">Заявки</p>
             </button>
             <button class="button_on_projects_classic" onclick="location.href='{%url 'profile'%}'"><img src="{% static 'image/profile_icon.svg' %}"><p class="projects_classic_button_text">Профиль</p></button>
