--- a/staticfiles/templates/posts_m.html
+++ b/staticfiles/templates/posts_m.html
@@ -27,7 +27,7 @@
     <button class="button_on_projects_classic" onclick="location.href='{% url 'projects_m'%}'"><img src="{% static 'image/projects.svg'%}"><p class="projects_classic_button_text">Проекты</p></button>
     <button class="button_on_projects_classic" onclick="location.href='{% url 'post_m'%}'"><img src="{% static 'image/yellow_posts.svg'%}"><p class="projects_classic_button_text_yellow">Посты</p></button>
     <button class="button_on_projects_classic" onclick="location.href='{% url 'result'%}'"><img src="{% static 'image/results.svg'%}"><p class="projects_classic_button_text">Результаты</p></button>
-    <button class="button_on_projects_classic" onclick="location.href='{% url 'applic_m'%}'"><img src="{% static 'image/Applications.svg' %}"><p class="projects_classic_button_text">Заявки</p></button>
+    <button class="button_on_projects_classic" onclick="location.href='{% url 'applic_m'%}'"><img src="{% static 'image/Applications (1).svg' %}"><p class="projects_classic_button_text">Заявки</p></button>
     <button class="button_on_projects_classic" onclick="location.href='{%url 'profile_manager'%}'"><img src="{% static 'image/profile_icon.svg' %}"><p class="projects_classic_button_text">Профиль</p></button>
 </div>
 
