--- a/staticfiles/templates/profile.html
+++ b/staticfiles/templates/profile.html
@@ -18,7 +18,7 @@
     <button class="button_on_projects_classic" onclick="location.href='{% url 'projects'%}'"><img src="{% static 'image/projects.svg'%}"><p class="projects_classic_button_text" >Проекты</p></button>
     <button class="button_on_projects_classic" onclick="location.href='{% url 'post'%}'"><img src="{% static 'image/posts.svg'%}"><p class="projects_classic_button_text">Посты</p></button>
     <button class="button_on_projects_classic" onclick="location.href='{% url 'result_blog'%}'"><img src="{% static 'image/results.svg'%}"><p class="projects_classic_button_text">Результаты</p></button>
-    <button class="button_on_projects_classic" onclick="location.href='{% url 'applic_b'%}'"><img src="{% static 'image/Applications.svg' %}"><p class="projects_classic_button_text">Заявки</p></button>
+    <button class="button_on_projects_classic" onclick="location.href='{% url 'applic_b'%}'"><img src="{% static 'image/Applications (1).svg' %}"><p class="projects_classic_button_text">Заявки</p></button>
     <button class="button_on_projects_classic" onclick="location.href='{%url 'profile'%}'"><img src="{% static 'image/yellow_profile_icon.svg' %}"><p class="projects_classic_button_text_yellow">Профиль</p></button>
 </div>
 
@@ -30,7 +30,7 @@
             <p class="default_data_text">Имя: <span class="black_profile_text_status"> {{us_information.name}}</span></p>
             <p class="default_data_text">Почта: <span class="default_data_text"> {{us_information.email}}</span></p>
             <p class="default_data_text">Роль: <span class="yellow_profile_text_status">  {{siu.rol}}</span></p>
-            <p class="default_data_text">Верефикация: <span class="black_profile_text_status">  Да</span></p>
+            <p class="default_data_text">Верификация: <span class="black_profile_text_status">  Да</span></p>
         </div>
 
     </div>
