--- a/templates/post.html
+++ b/templates/post.html
@@ -27,7 +27,7 @@
     <button class="button_on_projects_classic" onclick="location.href='{% url 'projects'%}'"><img src="{% static 'image/projects.svg' %}"><p class="projects_classic_button_text">Проекты</p></button>
     <button class="button_on_projects_classic" onclick="location.href='{% url 'post'%}'"><img src="{% static 'image/yellow_posts.svg'%}"><p class="projects_classic_button_text_yellow">Посты</p></button>
     <button class="button_on_projects_classic" onclick="location.href='{% url 'result_blog'%}'"><img src="{% static 'image/results.svg' %}"><p class="projects_classic_button_text">Результаты</p></button>
-    <button class="button_on_projects_classic" onclick="location.href='{% url 'applic_b'%}'"><img src="{% static 'image/Applications.svg' %}"><p class="projects_classic_button_text">Заявки</p></button>
+    <button class="button_on_projects_classic" onclick="location.href='{% url 'applic_b'%}'"><img src="{% static 'image/Applications (1).svg' %}"><p class="projects_classic_button_text">Заявки</p></button>
     <button class="button_on_projects_classic" onclick="location.href='{%url 'profile'%}'"><img src="{% static 'image/profile_icon.svg' %}"><p class="projects_classic_button_text">Профиль</p></button>
 </div>
 
