--- a/templates/project.html
+++ b/templates/project.html
@@ -26,7 +26,7 @@
             <button class="button_on_projects_classic" onclick="location.href='{% url 'projects'%}'"><img src="{% static 'image/yellow_projects.svg' %}"><p class="projects_classic_button_text_yellow">Проекты</p></button>
             <button class="button_on_projects_classic" onclick="location.href='{% url 'post'%}'"><img src="{% static 'image/posts.svg'%}"><p class="projects_classic_button_text">Посты</p></button>
             <button class="button_on_projects_classic" onclick="location.href='{% url 'result_blog'%}'"><img src="{% static 'image/results.svg' %}"><p class="projects_classic_button_text">Результаты</p></button>
-            <button class="button_on_projects_classic" onclick="location.href='{% url 'applic_b'%}'"><img src="{% static 'image/Applications.svg' %}"><p class="projects_classic_button_text">Заявки</p></button>
+            <button class="button_on_projects_classic" onclick="location.href='{% url 'applic_b'%}'"><img src="{% static 'image/Applications (1).svg' %}"><p class="projects_classic_button_text">Заявки</p></button>
             <button class="button_on_projects_classic" onclick="location.href='{%url 'profile'%}'"><img src="{% static 'image/profile_icon.svg' %}"><p class="projects_classic_button_text">Профиль</p></button>
         </div>
 
